--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "Mirek Rusin (https://github.com/mirek)",
   "license": "MIT",
   "devDependencies": {
+    "@prelude/array": "0.1.1",
     "@tsconfig/node14": "1.0.0",
     "@types/jest": "26.0.23",
     "eslint": "7.27.0",
