--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.2",
   "description": "Red-black tree module.",
   "type": "module",
-  "main": "index.js",
+  "main": "./cjs/index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "tsc && NODE_OPTIONS=--experimental-vm-modules jest",
-    "update": "npx npm-check --update --save-exact"
+    "test": "make test",
+    "preversion": "make test",
+    "postversion": "make postversion"
   },
   "keywords": [
     "prelude",
@@ -24,14 +25,28 @@
   "author": "Mirek Rusin (https://github.com/mirek)",
   "license": "MIT",
   "devDependencies": {
-    "@prelude/array": "2.0.0",
+    "@prelude/array": "2.1.0",
     "@tsconfig/node16": "1.0.2",
-    "@types/jest": "27.0.1",
-    "eslint": "7.32.0",
-    "jest": "27.2.0",
-    "typescript": "4.4.3"
+    "@types/jest": "27.0.2",
+    "eslint": "8.2.0",
+    "jest": "27.3.1",
+    "typescript": "4.4.4"
   },
   "dependencies": {
-    "@prelude/cmp": "1.0.0"
+    "@prelude/cmp": "1.4.3"
+  },
+  "module": "./mjs/index.js",
+  "exports": {
+    ".": {
+      "import": "./mjs/index.js",
+      "require": "./cjs/index.js"
+    },
+    "./*.js": {
+      "import": "./mjs/*.js",
+      "require": "./cjs/*.js"
+    },
+    "./*": {
+      "require": "./cjs/*.js"
+    }
   }
 }
